--- a/src/sass/components/_new-transaction-modal.scss
+++ b/src/sass/components/_new-transaction-modal.scss
@@ -24,7 +24,7 @@
 .under-layer-modal-content {
     position: absolute;
     height: 483px;
-    min-width: 388px;
+    min-width: min(388px, 95%);
     top: min(100px, 20vh);
     left: 50%;
     transform: translateX(-50%);
